--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<title>Pr‡ctica individual 1</title>
+		<link rel="stylesheet" href="./codigo/styles/main.css">
+		<script src="./codigo/js/loader.js"></script>
+		<script src="./codigo/js/game_info.js"></script>
+		<script src="./codigo/js/game_controller.js"></script>
+
+		<title> My first game - Index </title>
 	</head>
 	<body>
-		<p>Primera web de prova</p>
+		<p class="menu-object" id="title">Menu pr√†ctiques</p>
+		<button class="menu-object" onclick="loadpage('./codigo/index.html')">
+			Anar a l'index 
+		</button>
+		<a href="./codigo/index.html">    Texto</a>
 	</body>
 </html>
+
+
