--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="./codigo/styles/main.css">
-		<script src="./codigo/js/loader.js"></script>
-		<script src="./codigo/js/game_info.js"></script>
-		<script src="./codigo/js/game_controller.js"></script>
+		<link rel="stylesheet" href="./p2_i/styles/main.css">
+		<script src="./p2_i/js/loader.js"></script>
+		<script src="./p2_i/js/game_info.js"></script>
+		<script src="./p2_i/js/game_controller.js"></script>
 
 		<title> My first game - Index </title>
 	</head>
 	<body>
 		<p class="menu-object" id="title">Menu pràctiques</p>
-		<button class="menu-object" onclick="loadpage('./codigo/index.html')">
-			Anar a l'index 
+		<button class="menu-object" onclick="loadpage('./p2_i/index.html')">
+			Pràctica 1
 		</button>
-		<a href="./codigo/index.html">    Texto</a>
 	</body>
 </html>
 
