--- a/p2_i/html/game.html
+++ b/p2_i/html/game.html
@@ -14,6 +14,9 @@
 			<img src="../resources/tb.png" onclick="items[2].do_click()">
 			<img src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
-		<a class="menu-object" href="../">GoToMenu</a>
+		<div class="Sortir">
+			<button class="menu-object" onclick="loadpage('../index.html')">
+			Go to menu
+		</div>
 	</body>
 </html>
