Codi casi acabat

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Menu pràctiques</p>
+		<hr class="linia">
+		<div class="Control">
 		<button class="menu-object" onclick="loadpage('./p2_i/index.html')">
-			Pràctica 1
+			Pràctica 2
 		</button>
+		</div>
 	</body>
 </html>
 
