--- a/p2_i/html/game.html
+++ b/p2_i/html/game.html
@@ -8,15 +8,18 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory game</p>
-		<div>
-			<img src="../resources/cb.png" onclick="items[0].do_click()">
-			<img src="../resources/tb.png" onclick="items[1].do_click()">
-			<img src="../resources/tb.png" onclick="items[2].do_click()">
-			<img src="../resources/cb.png" onclick="items[3].do_click()">
+		<hr class="linia">
+		<di4t class="container">
+			<div class="imatges"> <img src="../resources/cb.png" onclick="items[0].do_click()"> </div>
+			<div class="imatges"> <img src="../resources/tb.png" onclick="items[1].do_click()"> </div>
+			<div class="imatges"> <img src="../resources/tb.png" onclick="items[2].do_click()"> </div>
+			<div class="imatges"> <img src="../resources/cb.png" onclick="items[3].do_click()"> </div>
+		</di4t>
+			<div class="Sortir">
+			<button class="menu-object" onclick="loadpage('../index.html')"> 
+				Go to menu
+			</button>
 		</div>
-		<div class="Sortir">
-			<button class="menu-object" onclick="loadpage('../index.html')">
-			Go to menu
-		</div>
+		
 	</body>
 </html>
