--- a/p2_i/index.html
+++ b/p2_i/index.html
@@ -9,15 +9,18 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory menu</p>
-		<button class="menu-object" onclick="start_game()"> 
-			Start Game 
-		</button>
-		<button class="menu-object" onclick="options()"> 
-			Options 
-		</button>
-		<button class="menu-object" onclick="exit()"> 
-			Exit 
-		</button>
+		<hr class="linia">
+		<div class="botons">
+			<button class="menu-object" onclick="start_game()"> 
+				Start Game 
+			</button>
+			<button class="menu-object" onclick="options()"> 
+				Options 
+			</button>
+			<button class="menu-object" onclick="exit()"> 
+				Exit 
+			</button>
+		</div>
 	</body>
 </html>
 
