--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title> My first game - Index </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">Menu pràctiques</p>
+		<p class="menu-object" id="title">Menú pràctiques</p>
 		<hr class="linia">
 		<div class="Control">
 		<button class="menu-object" onclick="loadpage('./p2_i/index.html')">
