--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<button class="menu-object" onclick="loadpage('./p2_i/index.html')">
 			Pràctica 2
 		</button>
+		<button class="menu-object" onclick="loadpage('./p3_i/index.html')">
+			Pràctica 3
+		</button>
 		</div>
 	</body>
 </html>
