--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="./p2_i/styles/main.css">
-		<script src="./p2_i/js/loader.js"></script>
-		<script src="./p2_i/js/game_info.js"></script>
-		<script src="./p2_i/js/game_controller.js"></script>
+		<link rel="stylesheet" href="./treball_i/styles/main.css">
+		<script src="./treball_i/js/loader.js"></script>
+		<script src="./treball_i/js/game_info.js"></script>
+		<script src="./treball_i/js/game_controller.js"></script>
 
 		<title> My first game - Index </title>
 	</head>
@@ -17,6 +17,9 @@
 		</button>
 		<button class="menu-object" onclick="loadpage('./p3_i/index.html')">
 			Pràctica 3
+		</button>
+		<button class="menu-object" onclick="loadpage('./treball_i/index.html')">
+			Treball individual
 		</button>
 		</div>
 	</body>
