Totes les pagines
Totes les pagines del memory

--- a/treball_i/html/game.html
+++ b/treball_i/html/game.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/main.css">
+		<link rel="stylesheet" href="../styles/style.css">
 		<script src="../js/loader.js"></script>
-		<title> My first game - Game </title>
+		<script src="//cdn.//jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+		<title> Phaser - Game </title>
 	</head>
 	<body>
 		<div id="game_id">
