--- a/treball_i/html/options.html
+++ b/treball_i/html/options.html
@@ -3,29 +3,22 @@
 	<head>
 		<link rel="stylesheet" href="../styles/style.css">
 		<script src="../js/loader.js"></script>
-		<title> My first game - Options </title>
+		<script src="../js/game_info.js"></script>
+		<script src="../js/menu_controller.js"></script>
+		<title> Phaser Game - Options </title>
 	</head>
 	<body>
-		<div id="options_id">
-			<p class="menu-object" id="title">Options menú</p>
-			<div class="menu-object">
-				<label for="labelnumber">Number of cards:</label>
-				<input type="number" id="labelnumber" v-model="num">
-			</div>
-			<div class="menu-object">
-				<p>Dificulty:</p>
-				<input type="radio" id="easy" value="easy" v-model="dificulty" checked>
-				<label for="easy">Easy</label>
-				<input type="radio" id="normal" value="normal" v-model="dificulty" >
-				<label for="normal">Normal</label>
-				<input type="radio" id="hard" value="hard" v-model="dificulty" >
-				<label for="hard">Hard</label>
-			</div>
-			<button class="menu-object" v-on:click="save"> Save </button>
-			<button class="menu-object" v-on:click="discard"> Discard </button>
-		</div>
+		<p class="menu-object" id="title">Options menu</p>
+		<button class="menu-object" onclick="loadpage('./mode1.html')"> 
+			Mode 1 
+		</button>
+		<button class="menu-object" onclick="loadpage('./mode2.html')"> 
+			Mode 2
+		</button>
+		<button class="menu-object" onclick="exit()"> 
+			Exit 
+		</button>
 	</body>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-	<script src="../js/options.js"></script>
 </html>
+
 
