--- a/treball_i/index.html
+++ b/treball_i/index.html
@@ -5,7 +5,7 @@
 		<script src="./js/loader.js"></script>
 		<script src="./js/game_info.js"></script>
 		<script src="./js/menu_controller.js"></script>
-		<title> My first game - Menu </title>
+		<title> Phaser Game - Menu </title>
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory menu</p>
@@ -14,6 +14,9 @@
 		</button>
 		<button class="menu-object" onclick="options()"> 
 			Options 
+		</button>
+		<button class="menu-object" onclick="loadpage('./html/scoreboard.html')"> 
+			Scoreboard
 		</button>
 		<button class="menu-object" onclick="exit()"> 
 			Exit 
