--- a/treball_i/html/game.html
+++ b/treball_i/html/game.html
@@ -2,22 +2,19 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../styles/style.css">
+		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
-		<script src="//cdn.//jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-		<title> Phaser - Game </title>
+		<script src="../js/scenes/game.js"></script>
+		<script src = "../js/phasergame_controller.js"></script>
+		<script src = "../js/menu_controller.js"></script>
+		
+		<title> My first game - PhaserIO Game </title>
 	</head>
 	<body>
-		<div id="game_id">
-			<p class="menu-object" id="title">Is playing {{username}}</p>
-			<p class="menu-object" id="title" v-if="score_text <= 0"> You Lose </p>
-			<p class="menu-object" id="title" v-else-if="num_cards <= 0">
-				You WIN!!! with {{score_text}} points
-			</p>
-			<img v-else v-for="(card, indx) in current_card" :src="card.texture" v-on:click="clickCard(indx)">
-		</div>
-		<a class="menu-object" href="../index.html">GoToMenu</a>
+		<div id = "game_area"></div>
 	</body>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-	<script src="../js/game_controller.js"></script>
+	<button class="menu-object" onclick="loadpage('../')"> 
+		Exit
+	</button>
 </html>
 
