--- a/treball_i/html/game.html
+++ b/treball_i/html/game.html
@@ -8,7 +8,7 @@
 		<script src = "../js/phasergame_controller.js"></script>
 		<script src = "../js/menu_controller.js"></script>
 		
-		<title> My first game - PhaserIO Game </title>
+		<title> Phaser Game - Game mode 1 </title>
 	</head>
 	<body>
 		<div id = "game_area"></div>
