--- a/treball_i/html/mode2.html
+++ b/treball_i/html/mode2.html
@@ -1,12 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phaser Game - Mode 2</title>
-</head>
-<body>
-    <h1> MODE 2</h1>
-    
-</body>
+<!DOCTYPE html> 
+<html>
+	<head>
+		<link rel="stylesheet" href="../styles/style.css">
+		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+		<script src="../js/loader.js"></script>
+		<script src="../js/scenes/game_mode2.js"></script>
+		<script src = "../js/phasergame_controller.js"></script>
+		<script src = "../js/menu_controller.js"></script>
+		
+		<title> Phaser Game - Game mode 2 </title>
+	</head>
+	<body>
+		<div id = "game_area"></div>
+	</body>
+	<button class="menu-object" onclick="loadpage('../')"> 
+		Exit
+	</button>
 </html>
+
