--- a/treball_i/html/options.html
+++ b/treball_i/html/options.html
@@ -5,18 +5,18 @@
 		<script src="../js/loader.js"></script>
 		<script src="../js/game_info.js"></script>
 		<script src="../js/menu_controller.js"></script>
-		<title> Phaser Game - Options </title>
+		<title> Phaser Game - Choose mode </title>
 	</head>
 	<body>
-		<p class="menu-object" id="title">Options menu</p>
-		<button class="menu-object" onclick="loadpage('./mode1.html')"> 
+		<p class="menu-object" id="title">Choose mode</p>
+		<button class="menu-object" onclick="loadpage('./game.html')"> 
 			Mode 1 
 		</button>
 		<button class="menu-object" onclick="loadpage('./mode2.html')"> 
 			Mode 2
 		</button>
 		<button class="menu-object" onclick="exit()"> 
-			Exit 
+			Go back 
 		</button>
 	</body>
 </html>
