--- a/treball_i/index.html
+++ b/treball_i/index.html
@@ -9,10 +9,10 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory menu</p>
-		<button class="menu-object" onclick="start_game()"> 
+		<button class="menu-object" onclick="options()"> 
 			Start Game 
 		</button>
-		<button class="menu-object" onclick="options()"> 
+		<button class="menu-object" onclick="loadpage('./html/mode1.html')"> 
 			Options 
 		</button>
 		<button class="menu-object" onclick="loadpage('./html/scoreboard.html')"> 
