--- a/treball_i/html/mode1.html
+++ b/treball_i/html/mode1.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="../styles/style.css">
 		<script src="../js/loader.js"></script>
-		<title> Phaser Game - Mode 1 </title>
+		<title> Phaser Game - Options </title>
 	</head>
 	<body>
 		<div id="options_id">
