--- a/treball_i/html/options.html
+++ b/treball_i/html/options.html
@@ -12,7 +12,7 @@
 		<button class="menu-object" onclick="loadpage('./game.html')"> 
 			Mode 1 
 		</button>
-		<button class="menu-object" onclick="loadpage('./mode2.html')"> 
+		<button class="menu-object" onclick="eliminarStorage()"> 
 			Mode 2
 		</button>
 		<button class="menu-object" onclick="exit()"> 
