Mode 2 amb seleccio de nivell i ranking
Ranking del mode 1 fet i nivell 2 seleccionant el nivell completat

--- a/treball_i/html/mode1.html
+++ b/treball_i/html/mode1.html
@@ -7,7 +7,11 @@
 	</head>
 	<body>
 		<div id="options_id">
-			<p class="menu-object" id="title">Options menú</p>
+			<p class="menu-object" id="title">Options menu</p>
+			<div class="menu-object">
+				<label for="labelnumber">Level on mode 2:</label>
+				<input type="number" id="labelnumber" v-model="lvl">
+			</div>
 			<div class="menu-object">
 				<label for="labelnumber">Number of cards:</label>
 				<input type="number" id="labelnumber" v-model="num">
