--- a/treball_i/index.html
+++ b/treball_i/index.html
@@ -15,7 +15,7 @@
 		<button class="menu-object" onclick="loadpage('./html/mode1.html')"> 
 			Options 
 		</button>
-		<button class="menu-object" onclick="loadpage('./html/scoreboard.html')"> 
+		<button class="menu-object" onclick="loadpage('./html/rankings.html')"> 
 			Scoreboard
 		</button>
 		<button class="menu-object" onclick="exit()"> 
