--- a/treball_i/html/options.html
+++ b/treball_i/html/options.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Choose mode</p>
-		<button class="menu-object" onclick="loadpage('./game.html')"> 
+		<button class="menu-object" onclick="start_game()"> 
 			Mode 1 
 		</button>
 		<button class="menu-object" onclick="eliminarStorage()"> 
