CSS i codi final
CSS aplicat a totes les pagines i petits retocs com treure console logs etc.

--- a/treball_i/html/game.html
+++ b/treball_i/html/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/style.css">
+		<link rel="stylesheet" href="../styles/main.css">
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
 		<script src="../js/scenes/game.js"></script>
@@ -11,6 +11,8 @@
 		<title> Phaser Game - Game mode 1 </title>
 	</head>
 	<body>
+		<p class="menu-object" id="title">Memory Game</p>
+		<hr class="linia">
 		<div id = "game_area"></div>
 	</body>
 	<button class="menu-object" onclick="loadpage('../')"> 
