--- a/treball_i/html/rankings.html
+++ b/treball_i/html/rankings.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory menu</p>
+		<hr class="linia">
 		<button class="menu-object" onclick="loadpage('./scoreboard.html')"> 
 			Mode 1
 		</button>
