--- a/treball_i/html/scoreboard.html
+++ b/treball_i/html/scoreboard.html
@@ -4,9 +4,11 @@
   	<script src="../js/loader.js"></script>
   	<script src="../js/menu_controller.js"></script>
 	<link rel="stylesheet" href="../styles/main.css">
+	<title> Phaser Game - Scoreboard mode 1 </title>
 </head>
 <body>
 	<p class="menu-object" id="title">Ranking</p>
+	<hr class="linia">
 	<div id="app" class="taula">
 		
 		<table class="table">
