--- a/treball_i/index.html
+++ b/treball_i/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory menu</p>
+		<hr class="linia">
 		<button class="menu-object" onclick="options()"> 
 			Start Game 
 		</button>
@@ -17,6 +18,9 @@
 		</button>
 		<button class="menu-object" onclick="loadpage('./html/rankings.html')"> 
 			Scoreboard
+		</button>
+		<button class="menu-object" onclick="alert('Coming soon')"> 
+			Saved Games
 		</button>
 		<button class="menu-object" onclick="exit()"> 
 			Exit 
