--- a/treball_i/html/mode1.html
+++ b/treball_i/html/mode1.html
@@ -6,8 +6,10 @@
 		<title> Phaser Game - Options </title>
 	</head>
 	<body>
+		<p class="menu-object" id="title">Options menu</p>
+		<hr class="linia">
 		<div id="options_id">
-			<p class="menu-object" id="title">Options menu</p>
+			
 			<div class="menu-object">
 				<label for="labelnumber">Level on mode 2:</label>
 				<input type="number" id="labelnumber" v-model="lvl">
