--- a/treball_i/html/mode2.html
+++ b/treball_i/html/mode2.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/style.css">
+		<link rel="stylesheet" href="../styles/main.css">
 		<script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 		<script src="../js/loader.js"></script>
 		<script src="../js/scenes/game_mode2.js"></script>
 		<script src = "../js/phasergame_controller.js"></script>
 		<script src = "../js/menu_controller.js"></script>
-		
 		<title> Phaser Game - Game mode 2 </title>
 	</head>
 	<body>
+		<p class="menu-object" id="title">Memory Game</p>
+		<hr class="linia">
 		<div id = "game_area"></div>
 	</body>
 	<button class="menu-object" onclick="loadpage('../')"> 
