--- a/treball_i/html/options.html
+++ b/treball_i/html/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<link rel="stylesheet" href="../styles/style.css">
+		<link rel="stylesheet" href="../styles/main.css">
 		<script src="../js/loader.js"></script>
 		<script src="../js/game_info.js"></script>
 		<script src="../js/menu_controller.js"></script>
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Choose mode</p>
+		<hr class="linia">
 		<button class="menu-object" onclick="start_game()"> 
 			Mode 1 
 		</button>
