--- a/treball_i/html/scoreboard2.html
+++ b/treball_i/html/scoreboard2.html
@@ -4,10 +4,12 @@
   	<script src="../js/loader.js"></script>
   	<script src="../js/menu_controller.js"></script>
 	<link rel="stylesheet" href="../styles/main.css">
+	<title> Phaser Game - Scoreboard mode 2 </title>
 </head>
 <body>
 	<p class="menu-object" id="title">Ranking</p>
-	<div id="app" class="taula">
+	<hr class="linia">
+	<div id="app" class="taula2">
 		
 		<table class="table">
 			<thead>
